--- a/index.html
+++ b/index.html
@@ -16,13 +16,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Sedans Choose a sedan for its affordability and excellent fuel economy.
-    Ideal for cruising in the city or on your next road trip. SUVs Take an SUV
-    for its spacious interior, power, and versatility. Perfect for your next
-    family vacation and off-road adventures. Luxury Cruise in the best car
-    brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-    rental and arrive in style.
-
+    <main class="main">
+      <div class="cards">
+        <div class="card sedans">
+          <img src="./images/icon-sedans.svg" alt="Sedans" class="icon" />
+          <h1 class="heading">Sedans</h1>
+          <p class="desc">
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <button class="cta">Learn More</button>
+        </div>
+        <div class="card suvs">
+          <img src="./images/icon-suvs.svg" alt="Suvs" class="icon" />
+          <h1 class="heading">Suvs</h1>
+          <p class="desc">
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button class="cta">Learn More</button>
+        </div>
+        <div class="card luxery">
+          <img src="./images/icon-luxury.svg" alt="Luxury" class="icon" />
+          <h1 class="heading">Luxery</h1>
+          <p class="desc">
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button class="cta">Learn More</button>
+        </div>
+      </div>
+    </main>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
