--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <button class="cta">Learn More</button>
+          <button class="cta orange">Learn More</button>
         </div>
         <div class="card suvs">
           <img src="./images/icon-suvs.svg" alt="Suvs" class="icon" />
@@ -34,16 +34,16 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <button class="cta">Learn More</button>
+          <button class="cta cyan">Learn More</button>
         </div>
-        <div class="card luxery">
+        <div class="card luxury">
           <img src="./images/icon-luxury.svg" alt="Luxury" class="icon" />
-          <h1 class="heading">Luxery</h1>
+          <h1 class="heading">Luxury</h1>
           <p class="desc">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <button class="cta">Learn More</button>
+          <button class="cta dark-cyan">Learn More</button>
         </div>
       </div>
     </main>
