--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a target="_blank" href="www.johannamagdalena.com">Your Name Here</a>.
+      <a target="_blank" href="www.johannamagdalena.com">Johanna Magdalena</a>.
     </div>
   </body>
 </html>
